Fix changes to hero on mobile view

--- a/profile/static/css/main.css
+++ b/profile/static/css/main.css
@@ -27,13 +27,15 @@ body {
 }
 
 .container {
-  display: flex;
-  align-content: center;
-  align-items: center;
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 section {
@@ -217,7 +219,7 @@ p {
 }
 
 .hero-content {
-  width: 40%;
+  max-width: 40%;
   height: 70%;
   border-radius: 20px;
 }
@@ -236,7 +238,7 @@ p {
 }
 
 .hero-image {
-  width: 40%;
+  max-width: 40%;
   height: 70%;
   object-fit: cover;
   border-radius: 20px;
@@ -507,6 +509,11 @@ p {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
+
+  .flex {
+    flex-direction: column;
+  }
+
   .site-header {
     position: relative
   }
@@ -514,6 +521,7 @@ p {
   .site-header .container {
     display: none;
   }
+
   .main-nav {
     display: none;
   }
